ui/v2.5/src/index.scss
/* ... */
.filter-container,
.operation-container,
.pagination {
  align-items: center;
  display: flex;
  justify-content: center;
  margin: 0 auto 10px;
}

.filter-item,
.operation-item {
  margin: 0 10px;
}

.rating-100-20 {
  background: #f00;
}

.rating-100-19 {
  background: #ff2409;
}

.rating-100-18 {
  background: #ff4812;
}

.rating-100-17 {
  background: #ff6a07;
}

.rating-100-16 {
  background: #ff8000;
}

.rating-100-15 {
  background: #fa8804;
}

.rating-100-14 {
  background: #f39409;
}

.rating-100-13 {
  background: #eca00e;
}

.rating-100-12 {
  background: #e7a811;
}

.rating-100-11 {
  background: #dfb617;
}

.rating-100-10 {
  background: #d2ca20;
}

.rating-100-9 {
  background: #cbb526;
}

.rating-100-8 {
  background: #c39f2b;
}

.rating-100-7 {
  background: #bd8e2f;
}

.rating-100-6 {
  background: #b47435;
}

.rating-100-5 {
  background: #af7944;
}

.rating-100-4 {
  background: #a7805b;
}

.rating-100-3 {
  background: #a48363;
}

.rating-100-2 {
  background: #9e8974;
}

.rating-100-1 {
  background: #9b8c7d;
}

.rating-100-0 {
  background: #939393;
}

.rating-5 {
  background: #ff2f39;
}

.rating-4 {
  background: $red1;
}

.rating-3 {
  background: $orange1;
}

.rating-2 {
  background: $sepia1;
}

.rating-1 {
  background: $dark-gray5;
}

.rating-banner {
  color: #fff;
  display: block;
  font-size: 1rem;
  font-weight: bold;
  left: -48px;
  letter-spacing: 1px;
  line-height: 1.6rem;
  padding: 6px 45px;
  position: absolute;
  text-align: center;
  text-size-adjust: none;
  text-transform: uppercase;
  top: 14px;
  transform: rotate(-36deg);
}

.card {
  background-color: $card-bg;
  border-radius: 3px;
  box-shadow: 0 0 0 1px rgba(16, 22, 26, 0.4), 0 0 0 rgba(16, 22, 26, 0),
    0 0 0 rgba(16, 22, 26, 0);
  padding: 20px;
}

.toast-container {
  max-width: 350px;
  opacity: 0.9;
  position: fixed;
  right: 2rem;
  top: 4rem;
  transition: right 0.5s;
  z-index: 1051;

  &.hidden {
    right: -350px;
  }

  .success {
    background-color: $success;
  }

  .danger {
    background-color: $danger;
  }

  .warning {
    background-color: $warning;
  }

  .toast {
    width: 350px;
  }

  .toast-header {
    background-color: transparent;
    border: none;
    color: $text-color;
    padding: 1rem;
    white-space: pre-wrap;

    .close,
    .expand-error-button {
      color: $text-color;
      text-shadow: none;
    }

    .expand-error-button {
      opacity: 0.5;
      padding-left: 0.25rem;
      padding-right: 0.25rem;

      &:hover {
        opacity: 0.75;
      }
    }
  }

  .toast.danger .toast-header > span {
    cursor: pointer;
  }
}

.toast-expanded-dialog {
  .modal-header {
    align-items: center;
    justify-content: start;

    .fa-icon {
      color: $danger;
      margin-right: 0.5rem;
    }
  }
}

@include media-breakpoint-down(xs) {
  .toast-container {
    bottom: 4rem;
    left: 50%;
    margin-left: -175px;
    right: unset;
    top: unset;

    transition: left 0.5s;

    &.hidden {
      left: -350px;
    }
  }
}

.image-input {
  margin-bottom: 0;
  position: relative;

  input[type="file"], /* FF, IE7+, chrome (except button) */
  input[type="file"]::-webkit-file-upload-button {
    /* chromes and blink button */
    cursor: pointer;
  }

  [type="file"] {
    display: block;
    filter: alpha(opacity=0);
    min-height: 100%;
    min-width: 100%;
    opacity: 0;
    position: absolute;
    right: 0;
    text-align: right;
    top: 0;
  }
}

.fa-icon {
  margin: 0 0.4rem;
}

.btn .fa-icon {
  &:last-child:first-child {
    margin: 0;
  }
}

.popover-body .btn .fa-icon,
.dropdown-item .fa-icon {
  margin-left: 0;
}

.brand-icon {
  padding: 3px 6px;

  img {
    height: 1.5rem;
  }
}

.top-nav {
  height: $navbar-height;
  justify-content: start;
  padding: 0.25rem 1rem;

  @include media-breakpoint-down(xs) {
    padding: 0.25rem 2rem;

    @media (orientation: portrait) {
      bottom: 0;
      top: auto;
    }
  }

  .navbar-toggler {
    padding: 0.5em 0;
    text-align: center;
    width: 3em;

    svg {
      margin: auto;
    }
  }

  .navbar-collapse {
    justify-content: space-between;
    max-height: calc(100vh - 4rem);

    @include media-breakpoint-down(xs) {
      @media (orientation: landscape) {
        overflow-y: scroll;
      }
    }

    .navbar-nav {
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: center;
      padding-bottom: 0.5rem;

      @include media-breakpoint-up(xl) {
        flex-wrap: nowrap;
        padding-bottom: 0;
      }

      &:last-child {
        display: none;
      }

      @include media-breakpoint-down(xs) {
        &:last-child {
          display: flex;
          min-height: 3rem;
        }
      }
    }
  }

  .navbar-buttons .btn {
    align-items: center;
    display: flex;
  }

  @include media-breakpoint-down(xs) {
    .navbar-buttons .nav-utility {
      display: none;
    }
  }

  .nav-link {
    padding: 0;
  }

  .fa-icon {
    @include media-breakpoint-down(xs) {
      margin: 0;
    }

    &.nav-menu-icon {
      @include media-breakpoint-down(lg) {
        height: 100%;
        max-height: min(10vw, 55px);
        width: 100%;
      }
    }
  }

  .btn {
    white-space: nowrap;
  }

  @include media-breakpoint-down(lg) {
    .navbar-brand {
      margin-left: -8px;
    }

    .navbar-buttons {
      margin: 0 -8px;
    }

    .btn {
      padding: 6px 12px;
    }
  }
}

.donate {
  align-items: center;
  display: flex;
  height: 100%;

  svg {
    color: #ff7373;

    @include media-breakpoint-down(xs) {
      margin: 0;
    }
  }
}

.error-message {
  white-space: pre-wrap;
}

.btn-toolbar .form-control {
  width: inherit;
}

.stats {
  &-element {
    flex-grow: 1;
    margin: auto 0.5rem;
  }

  .title {
    font-size: 3vw;
    text-align: center;

    @media (max-width: 576px) {
      font-size: 16px;
    }
  }

  .heading {
    text-align: center;
    text-transform: uppercase;
  }
}
/* ... */

